final phase1